--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -8,7 +8,7 @@
         {{ form.hidden_tag() }}
         {{ form.username.label }} {{ form.username(class_="form-control mb-2") }}
         {{ form.password.label }} {{ form.password(class_="form-control") }}
-        <div><a href="{{ url_for('forgot_password_send') }}" class="mb-3">Відновити пароль</a></div>
+        <div><a href="{{ url_for('auth.forgot_password_send') }}" class="mb-3">Відновити пароль</a></div>
         {{ form.remember_me(class_="form-check-input mb-2") }} {{ form.remember_me.label(class="form-check-label") }}
         {{ form.submit(class_="w-100 px-auto btn btn-primary") }}
     </form>
