--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,9 +4,9 @@
     {% block head %}
         <meta charset="UTF-8">
         {% block style %}
-            <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+            <link rel="shortcut icon" href="{{ url_for('static', filename=config['IMAGE_FOLDER'] + 'favicon.ico') }}">
             <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap/bootstrap.min.css') }}"/>
-            <link rel="stylesheet" href="{{ url_for('static', filename='/styles/style.css') }}"/>
+            <link rel="stylesheet" href="{{ url_for('static', filename='/style/user_style.css') }}"/>
             <link rel="stylesheet" href="{{ url_for('static', filename='mdb5/css/hover_shadow.min.css') }}" />
         {% endblock %}
         {% block script %}
@@ -21,41 +21,46 @@
     <header class="mb-3 fixed-top position-sticky">
         <nav class="navbar navbar-expand-xl navbar-light bg-light border-bottom box-shadow">
             <div class="container-lg">
-                <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='favicon.ico') }}" style="width: 30px; height: 30px;"></a>
+                <a class="navbar-brand" href="{{ url_for('main.index') }}"><img src="{{ url_for('static', filename=config['IMAGE_FOLDER'] + 'favicon.ico') }}" style="width: 35px; height: 35px;" alt="..."></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="{{ url_for('index') }}">Головна</a>
+                            <a class="nav-link text-dark" href="{{ url_for('main.index') }}">Головна</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="{{ url_for('products') }}">Товари</a>
+                            <a class="nav-link text-dark" href="{{ url_for('products.index') }}">Товари</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="{{ url_for('news') }}">Новини</a>
+                            <a class="nav-link text-dark" href="{{ url_for('news.index') }}">Новини</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="{{ url_for('contact') }}">Зв'язатися з нами</a>
+                            <a class="nav-link text-dark" href="{{ url_for('contact.index') }}">Зв'язатися з нами</a>
                         </li>
                         {# All items below #} <li class="nav-item ms-auto"></li> {# will be right-sided #}
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="{{ url_for('basket') }}">Корзина</a>
+                            <a class="nav-link text-dark" href="{{ url_for('basket.index') }}">Корзина</a>
                         </li>
-                        {% if user.is_authenticated %}
+                        {% if current_user.is_authenticated %}
+                            {% if current_user.has_any_role('admin', 'editor', 'support', 'seller') %}
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" href="{{ url_for('admin.index') }}">Адміністрування</a>
+                                </li>
+                            {% endif %}
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="{{ url_for('profile') }}">Профіль</a>
+                                <a class="nav-link text-dark" href="{{ url_for('auth.profile') }}">Профіль</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="{{ url_for('logout') }}">Вийти</a>
+                                <a class="nav-link text-dark" href="{{ url_for('auth.logout') }}">Вийти</a>
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="{{ url_for('login') }}">Вхід</a>
+                                <a class="nav-link text-dark" href="{{ url_for('auth.login') }}">Вхід</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="{{ url_for('register') }}">Реєстрація</a>
+                                <a class="nav-link text-dark" href="{{ url_for('auth.register') }}">Реєстрація</a>
                             </li>
                         {% endif %}
                     </ul>
