--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {{ super() }}
-{% block title %}Index{% endblock %}
+{% block title %}Головна{% endblock %}
 {% block content %}
 Index
 {% endblock %}
