--- a/templates/admin/news.html
+++ b/templates/admin/news.html
@@ -15,7 +15,7 @@
             <th>Востаннє оновлено</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody id="ajax-content">
         {% for user in users %}
             <tr>
                 <td>{{ user.id }}</td>
