--- a/templates/admin/user.html
+++ b/templates/admin/user.html
@@ -12,6 +12,7 @@
         {% endif %}
     {% endfor %}
     <div class="mx-auto col-xxl-4 col-xl-5 col-lg-6 col-md-10 col-sm-12">
+        <a class="btn btn-danger w-100" href="{{ url_for('admin.users') }}">Відміна</a>
         <h1 class="display-6 d-inline-block">Профіль</h1><span class="text-muted small float-end">#{{ user.id }}</span>
         <form method="post">
             {{ form.hidden_tag() }}
