--- a/templates/admin/products.html
+++ b/templates/admin/products.html
@@ -30,10 +30,7 @@
             </form>
         </tr>
         </thead>
-        <tbody>
-        {% if products is not iterable %}
-            {% set products = [products] %}
-        {% endif %}
+        <tbody id="ajax-content">
         {% for product in products %}
             <tr>
                 <td>{{ product.id }}</td>
