--- a/templates/auth/forgot_password_change.html
+++ b/templates/auth/forgot_password_change.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {{ super() }}
 {% block title %}Відновлення пароля{% endblock %}
 {% block content %}
