--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {{ super() }}
 {% block title %}Index{% endblock %}
 {% block content %}
