--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {{ super() }}
 {% block title %}Профіль{% endblock %}
 {% block content %}
