--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {{ super() }}
 {% block title %}Pagename{% endblock %}
 {% block content %}
