--- a/templates/error/error.html
+++ b/templates/error/error.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {{ super() }}
 {% block title %}Помилка{% endblock %}
 {% block content %}
