--- a/templates/products/products_response.html
+++ b/templates/products/products_response.html
@@ -1,19 +1,34 @@
-<div class="row row-cols-md-1 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-4 g-3 mb-4">
+<div class="row row-cols-md-1 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-4 g-2 mb-4 animate__animated animate__fadeInRight">
     {% for product in products %}
         {% if product.pictures %}
             {% set picture = product.pictures[0] %}
         {% endif %}
-        <div class="col">
-            <div class="card h-100 {{ 'hover-shadow' if product.in_stock() }}" style="cursor: pointer; {{ 'color: gray;' if not product.in_stock() }}" onclick="location.href='{{ url_for('products.product', product_id=product.id) }}'">
+        <div class="col ">
+            <div class="card h-100 {{ 'hover-shadow' if product.in_stock() }}" style="{{ 'color: gray;' if not product.in_stock() }}">
                 <img src="{{ url_for('static', filename=config['PRODUCT_UPLOAD_FOLDER'] + picture if picture else config['IMAGE_FOLDER'] + 'placeholder.png') }}"
                      class="card-img-top" {{ 'style="filter: grayscale(100%)"'|safe if not product.in_stock() }}
                      alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">{{ product.title }}</h5>
+                    <a class="card-title link d-inline-block" href="{{ url_for('products.product', product_id=product.id) }}"><h5 class="card-title">{{ product.title }}</h5></a>
                     <p class="card-text">{{ product.desc|truncate(125) }}</p>
                 </div>
                 <div class="card-footer">
-                    <a {# TODO: повинно працювати через АЖАКС, без перезавантаження сторінки #} class="btn btn-success w-100 {{ 'disabled' if not product.in_stock() }}">Додати у корзину</a>
+                    <div class="card-body">
+                        <p class="card-text {{ 'text-end' if not product.discount }}">
+                            {% if product.discount %}
+                                <small>
+                                    <span class="small text-muted">
+                                        {{ ("₴%.2f")|format(product.price) }}
+                                        <span class="small text-danger">
+                                            -{{ ("₴%.2f")|format(product.discount) }}
+                                        </span>
+                                    </span>
+                                </small>
+                            {% endif %}
+                            <span class="text-success {{ 'float-end' if product.discount }}"> {{ ("₴%.2f")|format(product.price - product.discount) }} </span>
+                        </p>
+                    </div>
+                    <a class="btn btn-success w-100 {{ 'disabled' if not product.in_stock() }}" onmousedown="addToBasket({{ product.id }})">Додати у корзину</a>
                     {% if current_user.has_role('editor') %}
                         <a class="btn btn-info w-100" href="{{ url_for('admin.product', product_id=product.id) }}">✏</a>
                         <a class="btn btn-danger w-100" href="{{ url_for('admin.product', product_id=product.id, delete=1) }}">🗑</a>
@@ -23,28 +38,3 @@
         </div>
     {% endfor %}
 </div>
-<ul class="pagination justify-content-center">
-    <li class="page-item {{ 'disabled' if page == 1  }}"><button class="page-link" onclick="load_page( {{ page-1 }} )">Назад</button></li>
-    {% if page > 1 %}
-        <li class="page-item"><button class="page-link" onclick="load_page({{ 1 }})">1</button></li>
-    {% endif %}
-    {% if page > 4 %}
-        <li class="page-item disabled"><button class="page-link">...</button></li>
-    {% endif %}
-    {% for p in range(page - 3, page) if p > 1 %}
-        <li class="page-item"><button class="page-link" onclick="load_page({{ p }})">{{ p }}</button></li>
-    {% endfor %}
-    <li class="page-item active"><a class="btn page-link" id="current_page" href="#">{{ page }}</a></li>
-    {% for p in range(page + 1, page + 4) if p < number_of_pages %}
-        <li class="page-item"><button class="page-link" onclick="load_page({{ p }})">{{ p }}</button></li>
-    {% endfor %}
-    {% if page < number_of_pages - 4 %}
-        <li class="page-item disabled"><button class="page-link">...</button></li>
-    {% endif %}
-    {% if page < number_of_pages %}
-        <li class="page-item"><button class="page-link" onclick="load_page({{ number_of_pages }})">{{ number_of_pages }}</button></li>
-    {% endif %}
-    <li class="page-item {{ 'disabled' if page == number_of_pages }}">
-        <button class="page-link" onclick="load_page({{ page }} + 1)">Вперед</button>
-    </li>
-</ul>
